--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+          alt="a Lion"/>
+          <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+          alt="a Lion"
+          title="a lion"/>
+
+
+
   </body>
 </html>
